kubernetes/applications/ngm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ngm
  namespace: ngm
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ngm
  ports:
    - { name: http, port: 3000, targetPort: 3000 }
